-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.1, Lustre 2.5.0
-
any client with http://review.whamcloud.com/#/c/6460/8/ patch landed.
-
3
-
12094
Cray reported an stat performance degradation in master with older servers (pre < 2.4).
it's easy replicated with statmany tool, as now it's have only ~600 stats per second for same files.
after bisect search by Cray
Patrick Farrell: http://review.whamcloud.com/#/c/6460/8/lustre/mdc/mdc_locks.c Patrick Farrell: That's the patch that my bisection suggests is the problem
after looking to logs - i see more getattr rpc's as should be in such situation.
so root cause of additional RPC's - patch tries to match PERM bit in lock for servers don't supported such feature, after disabling it - stat rate is restored.
- is related to
-
LU-3240 The link count is not updated after the mkdir
-
- Resolved
-