LU-4405 mdc: use correct matching mask

match an PERM ibits lock only if server support it,
otherwise client don't able to find a valid lock.

Xyratex-bug-id: MRP-1583
Signed-off-by: Alexey Lyashkov <alexey_lyashkov@xyratex.com>
Change-Id: I359b87e4bdc7b930e51538a4a854c47e87dd0520