lustre/include/lustre_export.h
@@ -380,6 +380,17 @@ static inline bool imp_connect_lvb_type(struct obd_import *imp)
 		return false;
 }
 
+static inline bool exp_connect_perm(struct obd_export *exp)
+{
+	struct obd_connect_data *ocd;
+
+	ocd = &exp->exp_connect_data;
+	if (ocd->ocd_ibits_known & MDS_INODELOCK_PERM)
+		return true;
+	else
+		return false;
+
+}
 extern struct obd_export *class_conn2export(struct lustre_handle *conn);
 extern struct obd_device *class_conn2obd(struct lustre_handle *conn);
 
